Announcing the release of Alexandria 0.6.6

* What is Alexandria?
=====================

Alexandria is an application for managing a personal book library.
Its main recommending feature is its clean, intuitive interface.
Alexandria is able to retrieve book information and cover images from
a wide variety of online data sources. It also features extensive
import and export options, a loan interface, and smart libraries.
Alexandria is written in Ruby using ruby-gnome2.

* Where can I get it?
=====================

- A source package can be downloaded at http://rubyforge.org/frs/?group_id=205
- An ad-hoc deb file (for Debian, Ubuntu & gNewSense) can be
  downloaded from there too
- For Ubuntu, there is a PPA at https://launchpad.net/~alexandria-team
- SVN can be accessed here: http://alexandria.rubyforge.org/svn/trunk/alexandria

* What's New in 0.6.6?
======================

- Fixed providers WorldCat (#27145), Proxis (#25730), Thalia (#27134),
  DeaStore (#27000) and BarnesAndNoble
- New provider Douban (China) thanks to Sun Ning
- Made providers turn-off-and-onable in Preferences (#26931)
- Implemented an ad-hoc MARC parser to fix some Z39.50 providers (#27471)
- Fixed Goodreads CSV import and added LibraryThing CSV import
- All incoming data converted to UTF-8 in a consistent fashion (#26968)

Some bug fixes:
[#27470] couldn't delete books if only one Library present
[#27515] covers for books without ISBN don't show up in export
[#25021] libraries and smart libraries context menus inconsistent

Where can I find out more?
==========================
 * Website: http://alexandria.rubyforge.org/
 * Screenshots/Screencast: http://alexandria.rubyforge.org/screenshots.html
 * Mailing List: http://rubyforge.org/pipermail/alexandria-list/
 * Bugs: http://rubyforge.org/tracker/?group_id=205	