@@ -110,7 +110,7 @@ This manual page was written by Cathal Mc Ginley
 .SH COPYRIGHT
 Copyright (C) 2004-2006 Laurent Sansonetti
 .LP
-Copyright (C) 2007 Alexandria Contributors
+Copyright (C) 2007-2010 Alexandria Contributors
 
 .SH LICENSE
 .I Alexandria
