@@ -23,7 +23,7 @@ module Alexandria
   bindtextdomain(Alexandria::TEXTDOMAIN, :charset => "UTF-8")
   DESCRIPTION = _('A program to help you manage your book collection.')
   COPYRIGHT = "Copyright (C) 2004,2005,2006 Laurent Sansonetti\n" +
-    "Copyright (C) 2007,2008,2009 Alexandria Contributors"
+    "Copyright (C) 2007,2008,2009,2010 Alexandria Contributors"
     AUTHORS = [
              'Alexander McCormmach <alexander@tunicate.org>',
              'Aymeric Nys <aymeric@nnx.com>',
